# vibecraft-backend

./: .env.example  .gitignore  README.md  config-development.yml  config-staging.yml  config.py  main.py  pyproject.toml  server.py  vibe_craft_sample.py  vibecraft-code.py
.claude/: settings.local.json
client/: vibe_craft_client.py
clients/: client_sample_v1.py  code_generator.py  data_collector.py  deploy.py  web_search_client.py
clients/samples/: client_sample_v1.py  client_sample_v2.py
core/: cors.py  exception_handler.py  logger.py
docs/: DESIGN_PATTERNS.md  fastmcp.md  mcp.md  vibecraft.drawio
engine/: __init__.py  base.py  claude_engine.py  gemini_engine.py  openai_engine.py
examples/: smithery_sample.py
exceptions/: __init__.py  base_custom_exception.py  not_found.py  unauthorized.py
mcp_agent/client/: __init__.py  vibe_craft_agent_runner.py  vibe_craft_client.py
mcp_agent/engine/: base.py  claude_engine.py  gemini_engine.py
mcp_agent/schemas/: __init__.py  prompt_parser_schemas.py  server_schemas.py
routers/: __init__.py  chat.py  content.py  workflow.py
samples/: dining.csv  sample.csv
schemas/: __init__.py  chat_history_schemas.py  data_schemas.py  data_upload_schemas.py  pipeline_schemas.py  sse_response_schemas.py  topic_schemas.py
schemas/chat_schemas/: __init__.py  chat_schemas.py
schemas/data_schemas/: __init__.py  document_schemas.py
schemas/sse_schemas/: __init__.py  sse_response_schemas.py
servers/: data_collector.py  data_upload_server.py  dispatcher.py  server_sample_v1.py  server_sample_v2.py  topic_server.py
servers/samples/: server_sample_v1.py  server_sample_v2.py
services/: __init__.py  base_service.py  base_stream_service.py  chat_service.py  workflow_service.py
services/business/: base_stream_service.py  chat_service.py  workflow_service.py
storage/: README.md
utils/: __init__.py  code_generator.py  content_utils.py  data_loader_utils.py  file_utils.py  flags.py  image_utils.py  menus.py  path_utils.py  prompts.py  tools.py  web_collector.py
(+13 files in other folders)
