[project]
name = "vibecraft-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "grandalf>=0.8",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "matplotlib>=3.10.6",
    "mcp[cli]>=1.12.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pyjwt==2.1.0",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
